--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,8 @@ AllCops:
 
 Style/Documentation:
   Enabled: false
+Style::ClassAndModuleChildren:
+  EnforcedStyle: compact
 Style/FrozenStringLiteralComment:
   Enabled: false
 Metrics/BlockLength:
