arrumado o rubocop.yml
Co-authored-by: FabioOya <fabio_iwao@hotmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,7 +14,7 @@ AllCops:
 
 Style/Documentation:
   Enabled: false
-Style::ClassAndModuleChildren:
+Style/ClassAndModuleChildren:
   EnforcedStyle: compact
 Style/FrozenStringLiteralComment:
   Enabled: false
