--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,3 +18,6 @@ Style/FrozenStringLiteralComment:
   Enabled: false
 Metrics/BlockLength:
   ExcludedMethods: ['describe', 'context', 'feature', 'scenario', 'let']
+Style/ClassAndModuleChildren:
+  Enabled: false
+  EnforcedStyle: 'compact'
